feat: internationalization review, convert, sucess screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,6 +24,7 @@
     "quant" : "Quantity",
     "pri" : "Current price",
     "vari" : "Variation",
+    "rev" : "Review",
     "value" : "Value",
     "conv" : "Convert coin",
     "avai" : "Available balance",
