--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -23,6 +23,7 @@
     }, 
     "quant" : "Quantidade",
     "vari" : "Variação",
+    "rev" : "Revisar",
     "pri" : "Preço atual",
     "value" : "Valor",
     "conv" : "Converter moeda",
