feat: internationalization transactions

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,6 +24,9 @@
     "quant" : "Quantity",
     "pri" : "Current price",
     "vari" : "Variation",
+    "mov1" : "You have no moves",
+    "mov2" : "No moves",
+    "mov3" : "Transactions",
     "rev" : "Review",
     "value" : "Value",
     "conv" : "Convert coin",
