--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -24,6 +24,9 @@
     "quant" : "Quantidade",
     "vari" : "Variação",
     "rev" : "Revisar",
+    "mov1" : "Você não possui movimentações",
+    "mov2" : "Sem movimentações",
+    "mov3" : "Movimentações",
     "pri" : "Preço atual",
     "value" : "Valor",
     "conv" : "Converter moeda",
